--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
         <div class="home__container container grid">
           <div class="home__content">
             <span class="home__small">Salut!</span>
-            <h1 class="home__title"><span>Je suis</span> Tawhid <br> 
+            <h1 class="home__title"><span>Je suis</span> Tawhid Hassane<br> 
               <span>Développeur Web</span>
             </h1>
 
             <p class="home__description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eum facilis quae maiores amet 
-              sapiente numquam quasi dolores dolorum. Eveniet at sit aperiam quam quasi. 
-              Eligendi totam reiciendis incidunt quo!
+              Je suis un Développeur Web et Mobile, un Graphiste et un Community Manager passionné par la création de solutions 
+              innovantes et esthétiques. Que vous ayez besoin d’un site web, d'une application mobile, d’un logo, d’une affiche, 
+              d’une bannière ou d’une stratégie de communication, mon équipe est là pour vous aider à réaliser vos projets.
             </p>
 
             <div class="home__btns">
@@ -128,39 +128,45 @@
       <section class="about section" id="about">
         <div class="about__container container grid">
           <div class="about__image-wrapper">
-            <img src="./assets/img/about.jpg" alt="" class="about__img">
-            <img src="./assets/img/about.jpg" alt="" class="about__img">
-            <img src="./assets/img/about.jpg" alt="" class="about__img">
-            <img src="./assets/img/about.jpg" alt="" class="about__img">
+            <img src="./assets/img/about.png" alt="" class="about__img">
+            <img src="./assets/img/about.png" alt="" class="about__img">
+            <img src="./assets/img/about.png" alt="" class="about__img">
+            <img src="./assets/img/about.png" alt="" class="about__img">
           </div>
 
           <div class="about__content">
-            <h2 class="section__title" data-title="Qui sui-je?">
-              Je suis Tawhid Hassane, un UI/UX Designer, Développeur Web et Community manager
+            <h2 class="section__title" data-title="Novahiz, Qui somme Nous?">
+              UI/UX Designer, Développeur Web et Mobile, Rédacteur Web, Créateur de Contenu et Community manager
             </h2>
 
             <p class="about__description"> 
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem repellendus reiciendis, 
-              illum in quasi, molestias, dolor magni obcaecati quae animi deleniti odio vero cum reprehenderit 
-              pariatur voluptate aperiam error libero.
-              Veritatis explicabo vitae, inventore quos sequi provident, non quibusdam pariatur quis totam, 
-              sint culpa ipsum odit! Doloremque temporibus dolor ut tempore porro! Officiis illo quaerat eaque, 
-              eius animi in beatae?
+              Nous sommes une équipe passionnée de développement web et nous sommes là pour 
+              donner vie à vos idées. Que vous ayez besoin d'un site web innovant, d'une application 
+              mobile ou d'une présence en ligne percutante, 
+              nous avons les compétences nécessaires pour transformer votre vision en réalité.
+
+
+
+              Explorez notre site pour découvrir nos réalisations précédentes et n'hésitez pas à nous 
+              contacter pour discuter de votre prochain projet. Ensemble, nous pouvons créer des sites web et 
+              des applications mobiles remarquables, 
+              que ce soit avec du codage traditionnel ou des solutions No-code.
             </p>
 
             <ul class="about__data grid">
+
               <li class="data__item">
-                <h3 class="data__title">Nom:</h3>
-                <span class="data__description">Tawhid Hassane</span>
+                <h3 class="data__title">Team:</h3>
+                <span class="data__description">6 membres</span>
               </li>
 
               <li class="data__item">
-                <h3 class="data__title">Age:</h3>
-                <span class="data__description">26 ans</span>
+                <h3 class="data__title">Siège:</h3>
+                <span class="data__description">Zongo, Parakou</span>
               </li>
 
               <li class="data__item">
-                <h3 class="data__title">Du:</h3>
+                <h3 class="data__title">Pays:</h3>
                 <span class="data__description">Bénin</span>
               </li>
 
@@ -171,7 +177,7 @@
             </ul>
 
             <div class="about__bottom">
-              <a href="" class="btn">Télécharger CV</a>
+              <a href="#contact" class="btn">Nous-contactez</a>
 
               <div class="about__social-links">
                 <a href="" class="about__social-link">
@@ -367,16 +373,20 @@
       <!--==================== SERVICES ====================-->
       <section class="services section" id="services">
           <h2 class="section__title title-center" data-title="Services">
-            Ce que je peux faire pour vous
+            Ce que nous pouvons faire pour vous
           </h2>
 
           <div class="services__container container grid">
             <div class="services__item">
               <i class="fa-solid fa-pen-to-square services__icon"></i>
 
-              <h3 class="services__title">UI/UX Design</h3>
+              <h3 class="services__title">Développement Web</h3>
               <p class="services__description">
-                Services with more than three years of experiences. Providing quality work to clients and companies
+                En tant que développeurs web expérimentés, nous maîtrisons une gamme de langages et de frameworks
+                tels que JavaScript, Node.js, React, Express, Next.js et Tailwind. 
+                Nous utilisons ces outils puissants pour concevoir des sites web interactifs, performants et esthétiquement attrayants.
+                Notre objectif est de vous offrir une expérience utilisateur optimale qui convertit les visiteurs en 
+                clients fidèles.
               </p>
 
               <span class="services__no">01</span>
@@ -385,9 +395,12 @@
             <div class="services__item">
               <i class="fa-solid fa-laptop services__icon"></i>
 
-              <h3 class="services__title">Développement Web</h3>
+              <h3 class="services__title">Graphisme</h3>
               <p class="services__description">
-                Services with more than three years of experiences. Providing quality work to clients and companies
+                Notre expertise ne se limite pas au développement web. Nous sommes également des graphistes 
+                talentueux, capables de créer des designs percutants et des interfaces utilisateur élégantes. 
+                Avec l'aide de logiciels tels que Canva, Figma et Photoshop, 
+                nous donnons vie à votre vision créative et renforçons l'identité visuelle de votre marque.
               </p>
 
               <span class="services__no">02</span>
@@ -398,7 +411,10 @@
 
               <h3 class="services__title">Community Management</h3>
               <p class="services__description">
-                Services with more than three years of experiences. Providing quality work to clients and companies
+                En tant que community managers, nous comprenons l'importance d'une stratégie de marketing numérique solide. 
+                Nous pouvons vous aider à développer une présence dynamique sur les médias sociaux, à interagir avec votre 
+                audience et à créer du contenu 
+                engageant qui suscite l'intérêt et renforce la notoriété de votre marque.
               </p>
 
               <span class="services__no">03</span>
@@ -407,9 +423,11 @@
             <div class="services__item">
               <i class="fa-solid fa-pen-to-square services__icon"></i>
 
-              <h3 class="services__title">UI/UX Design</h3>
+              <h3 class="services__title">Rédaction Web et Créaction de Contenu</h3>
               <p class="services__description">
-                Services with more than three years of experiences. Providing quality work to clients and companies
+                Nous pouvons donner vie à votre message à travers des articles, des blogs, des descriptions de 
+                produits et bien plus encore. Nous savons comment captiver votre audience avec un contenu pertinent, 
+                bien structuré et optimisé pour les moteurs de recherche.
               </p>
 
               <span class="services__no">04</span>
@@ -418,9 +436,11 @@
             <div class="services__item">
               <i class="fa-solid fa-laptop services__icon"></i>
 
-              <h3 class="services__title">Développement Web</h3>
+              <h3 class="services__title">Développement Mobile</h3>
               <p class="services__description">
-                Services with more than three years of experiences. Providing quality work to clients and companies
+                Nous nous aventurons également dans le développement mobile avec React Native. 
+                Que vous souhaitiez une application iOS, Android ou les deux, nous avons l'expérience 
+                nécessaire pour créer des applications mobiles fluides et intuitives qui répondent à vos besoins.
               </p>
 
               <span class="services__no">05</span>
@@ -429,9 +449,12 @@
             <div class="services__item">
               <i class="fa-solid fa-chart-area services__icon"></i>
 
-              <h3 class="services__title">Community Management</h3>
+              <h3 class="services__title">No-code</h3>
               <p class="services__description">
-                Services with more than three years of experiences. Providing quality work to clients and companies
+                Chez Novahiz, nous croyons en la puissance des solutions No-code pour permettre à nos clients de 
+                concrétiser leurs idées plus rapidement et plus facilement. 
+                Nous mettons notre expertise à votre service pour vous offrir des sites web et des applications 
+                mobiles exceptionnels, adaptés à vos besoins spécifiques.
               </p>
 
               <span class="services__no">06</span>
